--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,22 +1,48 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8ed0cd">  <td>24/02/27 14:26:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:testrunners.TestRunner@41e68d87]">runScenario</td> 
+<tr bgcolor="8ed0cd">  <td>24/02/27 19:23:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:testrunners.TestRunner@41e68d87]">runScenario</td> 
   <td>main@1398241764</td>   <td></td> </tr>
-<tr bgcolor="8ed0cd">  <td>24/02/27 14:26:36</td>   <td>14306</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:testrunners.TestRunner@41e68d87]">runScenario</td> 
+<tr bgcolor="8ed0cd">  <td>24/02/27 19:23:47</td>   <td>14783</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:testrunners.TestRunner@41e68d87]">runScenario</td> 
   <td>main@1398241764</td>   <td></td> </tr>
-<tr bgcolor="8ed0cd">  <td>24/02/27 14:26:48</td>   <td>26891</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:testrunners.TestRunner@41e68d87]">runScenario</td> 
+<tr bgcolor="8ed0cd">  <td>24/02/27 19:24:00</td>   <td>27117</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:testrunners.TestRunner@41e68d87]">runScenario</td> 
   <td>main@1398241764</td>   <td></td> </tr>
-<tr bgcolor="8ed0cd">  <td>24/02/27 14:27:02</td>   <td>40884</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:testrunners.TestRunner@41e68d87]">runScenario</td> 
+<tr bgcolor="8ed0cd">  <td>24/02/27 19:24:12</td>   <td>39709</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:testrunners.TestRunner@41e68d87]">runScenario</td> 
   <td>main@1398241764</td>   <td></td> </tr>
-<tr bgcolor="8ed0cd">  <td>24/02/27 14:27:20</td>   <td>58328</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:testrunners.TestRunner@41e68d87]">runScenario</td> 
+<tr bgcolor="8ed0cd">  <td>24/02/27 19:24:24</td>   <td>51496</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:testrunners.TestRunner@41e68d87]">runScenario</td> 
   <td>main@1398241764</td>   <td></td> </tr>
-<tr bgcolor="8ed0cd">  <td>24/02/27 14:27:35</td>   <td>73613</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:testrunners.TestRunner@41e68d87]">runScenario</td> 
+<tr bgcolor="8ed0cd">  <td>24/02/27 19:24:36</td>   <td>62863</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:testrunners.TestRunner@41e68d87]">runScenario</td> 
   <td>main@1398241764</td>   <td></td> </tr>
-<tr bgcolor="8ed0cd">  <td>24/02/27 14:27:49</td>   <td>87806</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:testrunners.TestRunner@41e68d87]">runScenario</td> 
+<tr bgcolor="8ed0cd">  <td>24/02/27 19:24:47</td>   <td>74178</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:testrunners.TestRunner@41e68d87]">runScenario</td> 
   <td>main@1398241764</td>   <td></td> </tr>
-<tr bgcolor="8ed0cd">  <td>24/02/27 14:26:20</td>   <td>-1482</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:testrunners.TestRunner@41e68d87]">&gt;&gt;setUpClass</td> 
+<tr bgcolor="8ed0cd">  <td>24/02/27 19:25:00</td>   <td>87605</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:testrunners.TestRunner@41e68d87]">runScenario</td> 
+  <td>main@1398241764</td>   <td></td> </tr>
+<tr bgcolor="8ed0cd">  <td>24/02/27 19:25:12</td>   <td>98817</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:testrunners.TestRunner@41e68d87]">runScenario</td> 
+  <td>main@1398241764</td>   <td></td> </tr>
+<tr bgcolor="8ed0cd">  <td>24/02/27 19:25:23</td>   <td>110407</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:testrunners.TestRunner@41e68d87]">runScenario</td> 
+  <td>main@1398241764</td>   <td></td> </tr>
+<tr bgcolor="8ed0cd">  <td>24/02/27 19:25:36</td>   <td>123417</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:testrunners.TestRunner@41e68d87]">runScenario</td> 
+  <td>main@1398241764</td>   <td></td> </tr>
+<tr bgcolor="8ed0cd">  <td>24/02/27 19:25:50</td>   <td>136826</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:testrunners.TestRunner@41e68d87]">runScenario</td> 
+  <td>main@1398241764</td>   <td></td> </tr>
+<tr bgcolor="8ed0cd">  <td>24/02/27 19:26:03</td>   <td>150552</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:testrunners.TestRunner@41e68d87]">runScenario</td> 
+  <td>main@1398241764</td>   <td></td> </tr>
+<tr bgcolor="8ed0cd">  <td>24/02/27 19:26:17</td>   <td>164645</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:testrunners.TestRunner@41e68d87]">runScenario</td> 
+  <td>main@1398241764</td>   <td></td> </tr>
+<tr bgcolor="8ed0cd">  <td>24/02/27 19:26:29</td>   <td>176799</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:testrunners.TestRunner@41e68d87]">runScenario</td> 
+  <td>main@1398241764</td>   <td></td> </tr>
+<tr bgcolor="8ed0cd">  <td>24/02/27 19:26:37</td>   <td>183874</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:testrunners.TestRunner@41e68d87]">runScenario</td> 
+  <td>main@1398241764</td>   <td></td> </tr>
+<tr bgcolor="8ed0cd">  <td>24/02/27 19:26:54</td>   <td>201034</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:testrunners.TestRunner@41e68d87]">runScenario</td> 
+  <td>main@1398241764</td>   <td></td> </tr>
+<tr bgcolor="8ed0cd">  <td>24/02/27 19:27:07</td>   <td>214773</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:testrunners.TestRunner@41e68d87]">runScenario</td> 
+  <td>main@1398241764</td>   <td></td> </tr>
+<tr bgcolor="8ed0cd">  <td>24/02/27 19:27:31</td>   <td>238655</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:testrunners.TestRunner@41e68d87]">runScenario</td> 
+  <td>main@1398241764</td>   <td></td> </tr>
+<tr bgcolor="8ed0cd">  <td>24/02/27 19:27:49</td>   <td>256778</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:testrunners.TestRunner@41e68d87]">runScenario</td> 
+  <td>main@1398241764</td>   <td></td> </tr>
+<tr bgcolor="8ed0cd">  <td>24/02/27 19:23:32</td>   <td>-1123</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:testrunners.TestRunner@41e68d87]">&gt;&gt;setUpClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1398241764</td>   <td></td> </tr>
-<tr bgcolor="8ed0cd">  <td>24/02/27 14:28:04</td>   <td>102306</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:testrunners.TestRunner@41e68d87]">&lt;&lt;tearDownClass</td> 
+<tr bgcolor="8ed0cd">  <td>24/02/27 19:27:57</td>   <td>264522</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:testrunners.TestRunner@41e68d87]">&lt;&lt;tearDownClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1398241764</td>   <td></td> </tr>
 </table>
